投稿コメント仮作成

--- a/tunatoriproject/tunatoriapp/templates/reply.html
+++ b/tunatoriproject/tunatoriapp/templates/reply.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>作品投稿</title>
+        <title>作品へコメント</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -33,7 +33,7 @@
         <header class="py-5 bg-light border-bottom mb-4">
             <div class="container">
                 <div class="text-center my-5">
-                    <h1 class="fw-bolder">作品投稿ページ</h1>
+                    <h1 class="fw-bolder">返信ページ</h1>
                     <p class="lead mb-0">このページで作品の投稿ができます</p>
                 </div>
             </div>
