--- a/tunatoriproject/accounts/templates/login.html
+++ b/tunatoriproject/accounts/templates/login.html
@@ -58,7 +58,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
       <input class="w-100 btn btn-lg btn-primary" type="submit" value="ログイン">
       <br><br>
       <p><a href="{% url 'password_reset' %}">パスワードを忘れましたか？</a></p>
-      <input type="hidden" name="next" value="{% url 'photo:index' %}">
+      <input type="hidden" name="next" value="{% url 'tunatoriapp:index' %}">
   </form>
 </main>
 
