--- a/tunatoriproject/accounts/templates/password_reset_done.html
+++ b/tunatoriproject/accounts/templates/password_reset_done.html
@@ -24,7 +24,7 @@
     </p>
     <br>
     <!-- トップページへのリンク-->
-     <a href="{% url 'photo:index' %}">Photo Galleryのトップページ</a>
+     <a href="{% url 'tunatoriapp:index' %}">Photo Galleryのトップページ</a>
   </div>
 </body>
 
