--- a/tunatoriproject/accounts/templates/password_reset_sent.html
+++ b/tunatoriproject/accounts/templates/password_reset_sent.html
@@ -15,7 +15,7 @@
         確認し、迷惑メールフォルダーも確認してみてください。</h6>
       <br>
       <!-- トップページへのリンク-->
-       <a href="{% url 'photo:index' %}">Photo Gallery</a>
+       <a href="{% url 'tunatoriapp:index' %}">Photo Gallery</a>
     </div>
   </div>
 </div>
