--- a/tunatoriproject/accounts/templates/signup.html
+++ b/tunatoriproject/accounts/templates/signup.html
@@ -28,7 +28,7 @@
                 <input type="submit" value="Sign up">
             </form>
             <br>
-            <p><a href="{% url 'photo:index' %}">
+            <p><a href="{% url 'tunatoriapp:index' %}">
                 登録をやめてトップページに戻る</a>
             </p>
         </div>
