--- a/tunatoriproject/accounts/templates/logout.html
+++ b/tunatoriproject/accounts/templates/logout.html
@@ -7,5 +7,5 @@
     <div class="row">
         <div class="col offset-4 py-4">
             <h3>ログアウトしました</h3>
-            <p><a href="{% url 'photo:index' %}">トップページ</a></p>
+            <p><a href="{% url 'tunatoriapp:index' %}">トップページ</a></p>
 {% endblock %}
