--- a/tunatoriproject/tunatoriapp/templates/index.html
+++ b/tunatoriproject/tunatoriapp/templates/index.html
@@ -25,7 +25,7 @@
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#">投稿</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'tunatoriapp:publish' %}">投稿</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'accounts:login' %}">ログイン</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'accounts:logout' %}">ログアウト</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'accounts:signup' %}">新規登録</a></li>
