--- a/tunatoriproject/tunatoriapp/templates/index.html
+++ b/tunatoriproject/tunatoriapp/templates/index.html
@@ -1,133 +1,90 @@
-{% load static %}
+{% extends 'base.html' %}
 
-<!DOCTYPE html>
-<html lang="ja">
+{% block title %}Tunatori Home{% endblock %}
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Blog Home - Start Bootstrap Template</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-</head>
-
-<body>
-    <!-- Responsive navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#!">Start Bootstrap</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="{% url 'tunatoriapp:publish' %}">投稿</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'accounts:login' %}">ログイン</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'accounts:logout' %}">ログアウト</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'accounts:signup' %}">新規登録</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'tunatoriapp:profile' %}">プロフィール</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- Page header with logo and tagline-->
-    <header class="py-1 bg-light border-bottom mb-4">
-        <div class="container">
-            <div class="card mb-3">
-                <div class="card-header">検索</div>
-                <div class="card-body">
-                    <div class="input-group">
-                        <input class="form-control" type="text" placeholder="キーワードを入力" aria-label="キーワード入力..."
-                            aria-describedby="button-search" />
-                        <button class="btn btn-primary" id="button-search" type="button">検索</button>
-                    </div>
-                </div>
-            </div>
-            <div class="text-center my-5">
-                <h1 class="fw-bolder">つなぐアトリエ</h1>
-                <p class="lead mb-0">A Bootstrap 5 starter layout for your next blog homepage</p>
-            </div>
-        </div>
-    </header>
-    <!-- Page content-->
+{% block header %}
+<!-- Page header with logo and tagline-->
+<header class="py-1 bg-light border-bottom mb-4">
     <div class="container">
-        <div class="row">
-            <!-- Blog entries-->
-            <div class="col-lg-8">
-                <!-- Featured blog post-->
-                {% for record in object_list %}
-                <div class="card mb-4">
-                    <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg"
-                            alt="..." /></a>
-                    <div class="card-body">
-                        <div class="small text-muted">January 1, 2023</div>
-                        <h2 class="card-title">Featured Post Title</h2>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
-                            aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi
-                            vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                        <a class="btn btn-primary" href="#!">Read more →</a>
-                    </div>
+        <div class="card mb-3">
+            <div class="card-header">検索</div>
+            <div class="card-body">
+                <div class="input-group">
+                    <input class="form-control" type="text" placeholder="キーワードを入力" aria-label="キーワード入力..."
+                        aria-describedby="button-search" />
+                    <button class="btn btn-primary" id="button-search" type="button">検索</button>
                 </div>
-                {% endfor %}
-                <!-- Nested row for non-featured blog posts-->
-                <div class="row">
-                    <div class="col-lg-6">
-                        <!-- Blog post-->
-                        <!-- Blog post-->
-                    </div>
-                    <div class="col-lg-6">
-                        <!-- Blog post-->
-                        <!-- Blog post-->
-                    </div>
-                </div>
-                <!-- Pagination-->
-
             </div>
-            <!-- Side widgets-->
-            <div class="col-lg-4">
-                <!-- Search widget-->
-                <div class="card mb-4">
+        </div>
+        <div class="text-center my-5">
+            <h1 class="fw-bolder">つなぐアトリエ</h1>
+            <p class="lead mb-0">A Bootstrap 5 starter layout for your next blog homepage</p>
+        </div>
+    </div>
+</header>
+{% endblock %}
+
+
+{% block contents %}
+<!-- Blog entries-->
+<div class="col-lg-8">
+    <!-- Featured blog post-->
+    {% for record in object_list %}
+    <div class="card mb-4">
+        <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
+        <div class="card-body">
+            <div class="small text-muted">January 1, 2023</div>
+            <h2 class="card-title">Featured Post Title</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
+                aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi
+                vero voluptate voluptatibus possimus, veniam magni quis!</p>
+            <a class="btn btn-primary" href="#!">Read more →</a>
+        </div>
+    </div>
+    {% endfor %}
+    <!-- Nested row for non-featured blog posts-->
+    <div class="row">
+        <div class="col-lg-6">
+            <!-- Blog post-->
+            <!-- Blog post-->
+        </div>
+        <div class="col-lg-6">
+            <!-- Blog post-->
+            <!-- Blog post-->
+        </div>
+    </div>
+    <!-- Pagination-->
+
+</div>
+{% endblock %}
+{% block category %}
+<!-- Side widgets-->
+<div class="col-lg-4">
+    <!-- Search widget-->
+    <div class="card mb-4">
+    </div>
+    <!-- Categories widget-->
+    <div class="card mb-4">
+        <div class="card-header">カテゴリー</div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-sm-6">
+                    <ul class="list-unstyled mb-0">
+                        <li><a href="#!">Web Design</a></li>
+                        <li><a href="#!">HTML</a></li>
+                        <li><a href="#!">Freebies</a></li>
+                    </ul>
                 </div>
-                <!-- Categories widget-->
-                <div class="card mb-4">
-                    <div class="card-header">カテゴリー</div>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <ul class="list-unstyled mb-0">
-                                    <li><a href="#!">Web Design</a></li>
-                                    <li><a href="#!">HTML</a></li>
-                                    <li><a href="#!">Freebies</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-sm-6">
-                                <ul class="list-unstyled mb-0">
-                                    <li><a href="#!">JavaScript</a></li>
-                                    <li><a href="#!">CSS</a></li>
-                                    <li><a href="#!">Tutorials</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-sm-6">
+                    <ul class="list-unstyled mb-0">
+                        <li><a href="#!">JavaScript</a></li>
+                        <li><a href="#!">CSS</a></li>
+                        <li><a href="#!">Tutorials</a></li>
+                    </ul>
                 </div>
-                <!-- Side widget-->
             </div>
         </div>
     </div>
-    <!-- Footer-->
-    <footer class="py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
-        </div>
-    </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-</body>
-
-</html>
+    <!-- Side widget-->
+</div>
+{% endblock %}
