--- a/tunatoriproject/accounts/templates/login.html
+++ b/tunatoriproject/accounts/templates/login.html
@@ -46,7 +46,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
   {% endif %}
   <form method="post">
     {% csrf_token %}
-    <img class="mb-4" src={% static "img/bootstrap-logo.svg" %} alt="" width="72" height="57">
+    <img class="mb-4" src={% static "images/sampleimage.png" %} alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
     <label for="Username" class="visually-hidden">
