--- a/tunatoriproject/accounts/templates/password_reset.html
+++ b/tunatoriproject/accounts/templates/password_reset.html
@@ -21,7 +21,7 @@
        </form>
       <br>
       <!-- トップページへのリンク-->
-      <a href="{% url 'tunatoriapp:index' %}">Photo Gallery</a>
+      <a href="{% url 'tunatoriapp:index' %}"><Ri:a>Tunatori</Ri:a></a>
       <hr>
     </div>
   </div>
