--- a/tunatoriproject/tunatoriapp/templates/base.html
+++ b/tunatoriproject/tunatoriapp/templates/base.html
@@ -25,12 +25,15 @@
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="{% url 'tunatoriapp:index' %}">Home</a></li>
+                    {% if user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'tunatoriapp:publish' %}">投稿</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'accounts:login' %}">ログイン</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'accounts:logout' %}">ログアウト</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'accounts:signup' %}">新規登録</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'tunatoriapp:profile' %}">プロフィール</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+                    {% else %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'accounts:signup' %}">新規登録</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'accounts:login' %}">ログイン</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
